package com.m2i.poo.geometry;

public class Carre extends Rectangle {

    public Carre(double cote) {
        super(cote, cote);
    }
}