@startuml

title __GEOMETRY's Class Diagram__\n

  package com.m2i.poo {
    package com.m2i.poo.geometry {
      class Carre {
          + Carre()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.geometry {
      class Point {
          - x : double
          - y : double
          + Point()
          + Point()
          ~ moveTo()
          ~ display()
          ~ moveRelative()
          + getX()
          - setX()
          + getY()
          - setY()
          + toString()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.geometry {
      class Point3d {
          - z : double
          + Point3d()
          + getZ()
          + setZ()
          + toString()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.geometry {
      class Program {
          {static} + main()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.geometry {
      class Rectangle {
          - width : double
          - height : double
          + Rectangle()
          + getSurface()
          + getPerimetre()
          + getWidth()
          + setWidth()
          + getHeight()
          + setHeight()
          + getOrigin()
          + setOrigin()
      }
    }
  }
  

  package com.m2i.poo {
    package com.m2i.poo.geometry {
      class TriangleRectangle {
          + TriangleRectangle()
          + getSurface()
          + getHypothenus()
          + getPerimetre()
      }
    }
  }
  

  Carre -up-|> Rectangle
  Point3d -up-|> Point
  Rectangle o-- Point : origin
  TriangleRectangle -up-|> Rectangle


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
